# sscrabble

./: .config  .coverage  .gitignore  README.md  pyproject.toml  ruff.toml  sscrabble.py
.github/workflows/: lint.yml  test.yml
cmd/: app.py  process.py
connections/: __init__.py  spotify.py
connections/tests/: test_spotify.py
resolver/: __init__.py  base.py  errors.py  inline.py
resolver/tests/: test_base.py  test_inline.py
tools/: __init__.py  config.py
tools/tests/: test_config.py
